src/style.scss
* { box-sizing: border-box; }
textarea, select, input, button { outline: none; }
a, button { user-select: none; }

/* Variables */
$flexboxgrid-outer-margin: 0rem;
$flexboxgrid-gutter-width: 3rem;
$flexboxgrid-max-width: 960px;


/* Imports */
@import 'theme/flexboxgrid';
@import 'theme/fonts';
@import 'theme/variables';
@import 'theme/colors';
@import 'theme/buttons';
@import 'theme/texts';
@import 'theme/form';

@import 'layouts/navbar/navbar';
@import 'pages/home/home';


/* Global */
::selection { background: $primary; color: white; }

body, html {
    font-family: 'Montserrat', sans-serif;
    font-size: 10px;
    font-weight: 600;
    overflow-x: hidden;
}

body { padding-top: $navHeight; }

.container { width: 80%; }

.shape {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: 0 0;
}

@media screen and (max-width: map-get($flexboxgrid-breakpoints, sm)) {
    body, html { overflow: inherit; }
    body { padding-top: $navSmallHeight; overflow-x: hidden; }
    .container { width: 90%; }
}

